force-app/main/default/objects/Key_Data_Measurements__c/Key_Data_Measurements__c.object-meta.xml
<CustomObject>
    <label>Key Data Measurement</label>
    <nameField>
        <displayFormat>KDM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Data Measurements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>