force-app/main/default/objects/Key_Data_Measurements__c/fields/Key_Data_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Key_Data_Measurement__c</fullName>
    <label>Key Data Measurement</label>
    <type>TextArea</type>
</CustomField>