force-app/main/default/objects/Key_Data_Measurements__c/fields/Reason_for_Program_Success__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Program_Success__c</fullName>
    <label>Reason for Program Success</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>