force-app/main/default/objects/Key_Data_Measurements__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates the records of KDM to a Case</description>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Key Data Measurements</relationshipLabel>
    <relationshipName>Key_Data_Measurements</relationshipName>
    <type>Lookup</type>
</CustomField>